plugins {
    id 'checkstyle'
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.github.ben-manes.versions' version '0.52.0'
    id 'se.patrikerdes.use-latest-versions' version '0.2.19'
    id 'java-library'
    id 'maven-publish'
}

group = 'com.github.hmcts'
version = System.getenv("RELEASE_VERSION")?: "DEV-SNAPSHOT"

checkstyle {
    maxWarnings = 0
    toolVersion = '11.0.1'
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }

    withSourcesJar()
    withJavadocJar()
}

compileJava {
    options.compilerArgs << '-parameters' << '-Xlint:deprecation'
}

compileTestJava {
    options.compilerArgs << '-Xlint:deprecation'
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url = 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
        name = 'HMCTS common libraries'
    }
}

jar {
    manifest {
        attributes 'Implementation-Title': project.name, 'Implementation-Version': project.version
    }
}

task printVersion {
    doLast {
        print project.version
    }
}

def gitRepo = "https://github.com/hmcts/ccd-client"

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java

            pom {
                name = 'Core case data store client'
                description = 'Core case data store client'
                url = gitRepo
                licenses {
                    license {
                        name = 'MIT License, Copyright (c) 2023 HM Courts & Tribunals Service'
                        url = 'https://www.opensource.org/licenses/MIT'
                    }
                }
                scm {
                    url = gitRepo
                }
            }
        }
    }

    repositories {
        maven {
            name = 'AzureArtifacts'
            url = uri('https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1')
            credentials {
                username = System.getenv('AZURE_DEVOPS_ARTIFACT_USERNAME')
                password = System.getenv('AZURE_DEVOPS_ARTIFACT_TOKEN')
            }
        }
    }
}

ext {
    lombokVersion = '1.18.40'
}

sourceSets {
    functionalTest {
        compileClasspath += sourceSets.main.output
        runtimeClasspath += sourceSets.main.output
    }
}

configurations {
    functionalTestImplementation.extendsFrom testImplementation
    functionalTestRuntimeOnly.extendsFrom testRuntimeOnly
}

task functionalTest(type: Test) {
    description = 'Runs functional tests.'
    group = 'verification'

    testClassesDirs = sourceSets.functionalTest.output.classesDirs
    classpath = sourceSets.functionalTest.runtimeClasspath
}

dependencies {
    implementation(platform("org.springframework.cloud:spring-cloud-dependencies:2024.0.2"))
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.github.openfeign:feign-jackson'

    implementation "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.13.4'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.github.tomakehurst:wiremock-standalone:3.0.1'
    testImplementation 'com.google.guava:guava:33.4.8-jre'

    testImplementation "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    functionalTestImplementation 'com.github.hmcts:service-auth-provider-java-client:5.3.3'
    functionalTestImplementation 'com.github.hmcts:idam-java-client:3.0.4'

    functionalTestImplementation 'org.assertj:assertj-core:3.27.0'
    functionalTestCompileOnly "org.projectlombok:lombok:${lombokVersion}"
    functionalTestAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    functionalTestImplementation 'com.fasterxml.jackson.module:jackson-module-parameter-names:2.20.0'
}

wrapper {
    distributionType = Wrapper.DistributionType.ALL
}

tasks.withType(Test) {
    useJUnitPlatform()
}

bootJar {
    enabled = false
}

jar {
    enabled = true
    archiveClassifier = ''
}
